# x

./: Dockerfile  README.md  app.py  pyproject.toml  quant.db  requirements.txt
quant_platform/: config.py  main.py
quant_platform/backtest/: engine.py
quant_platform/broker/: alpaca_broker.py  base_broker.py  ibkr_broker.py
quant_platform/data/: data_provider.py  yfinance_provider.py
quant_platform/database/: models.py
quant_platform/live/: engine.py  real_time_engine.py
quant_platform/scheduler/: tasks.py
quant_platform/strategy/: __init__.py  base_strategy.py  bb_breakout.py  ma_crossover.py  rsi_mean_reversion.py
quant_platform/utils/: logger.py
